Add class tags and styling

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,11 @@
   <body>
     <header>
       <nav>
-        <button id="home-btn">Home</button>
-        <button id="menu-btn">Menu</button>
-        <button id="about-btn">About</button>
+        <div id="buttons">
+          <button id="home-btn">Home</button>
+          <button id="menu-btn">Menu</button>
+          <button id="about-btn">About</button>
+        </div>
       </nav>
     </header>
     <div id="content"></div>
